--- a/popup.html
+++ b/popup.html
@@ -6,15 +6,11 @@
   <body>
     <!-- Tool Button Container -->
     <div class="button-container">
-      <button id="pen-button" class="tool-button"><img src="icons/pen.png" alt="Pen" /></button>
-      <button id="highlight-button" class="tool-button">
-        <img src="icons/highlight.png" alt="Highlight" />
-      </button>
-      <button id="note-button" class="tool-button">
-        <img src="icons/note.png" alt="Add Note" />
-      </button>
-      <button id="undo-button" class="tool-button"><img src="icons/undo.png" alt="Undo" /></button>
-      <button id="save-button" class="tool-button"><img src="icons/save.png" alt="Save" /></button>
+      <button id="pen-button" class="tool-button">Pen</button>
+      <button id="highlight-button" class="tool-button">Highlight</button>
+      <button id="note-button" class="tool-button">Note</button>
+      <button id="undo-button" class="tool-button">Undo</button>
+      <button id="save-button" class="tool-button">Save</button>
     </div>
 
     <!-- Color Selector Container -->
